--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 			<br>
             
-            <ul class="todo-list">
-            </ul>
+            <ol class="todo-list collection">
+            </ol>
             
             <div class="right-align">
                 <div class="counter">
