--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
 
 		<header class="content-box">
-			<h1>ToDo List</h1>
-			<p>A simple todo list app.</p>
+            <div class="center-align">
+                <h1>ToDo List</h1>
+                <p>A simple todo list app.</p>
+            </div>
 		</header>
 
 		<section class="form-area content-box">
